force-app/main/default/objects/Opportunity/fields/Nextstep_Date__c.field-meta.xml
<CustomField>
    <fullName>Nextstep_Date__c</fullName>
    <label>Nextstep Date</label>
    <type>Date</type>
</CustomField>