force-app/main/default/objects/Opportunity/fields/Opportunity_application_TEXT__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_application_TEXT__c</fullName>
    <label>Opportunity application (TEXT)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>