force-app/main/default/objects/Opportunity/fields/Other_application__c.field-meta.xml
<CustomField>
    <fullName>Other_application__c</fullName>
    <label>Other application</label>
    <type>TextArea</type>
</CustomField>