force-app/main/default/objects/Opportunity/fields/Other_reasons__c.field-meta.xml
<CustomField>
    <fullName>Other_reasons__c</fullName>
    <label>Other reasons</label>
    <type>TextArea</type>
</CustomField>