force-app/main/default/objects/Opportunity/fields/Predisposizione_rotary__c.field-meta.xml
<CustomField>
    <fullName>Predisposizione_rotary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rotary pre-configuration</label>
    <type>Checkbox</type>
</CustomField>