force-app/main/default/objects/Opportunity/fields/PRO__c.field-meta.xml
<CustomField>
    <fullName>PRO__c</fullName>
    <description>Used to sort opportunity by product range</description>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MTL</fullName>
            </value>
            <value>
                <fullName>FOV</fullName>
            </value>
            <value>
                <fullName>AUTOMATION</fullName>
            </value>
            <value>
                <fullName>CABINET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>