force-app/main/default/objects/Opportunity/fields/product_of_interes_1__c.field-meta.xml
<CustomField>
    <fullName>product_of_interes_1__c</fullName>
    <label>product of interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>PRO__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Metrios</fullName>
                <label>METRIOS</label>
            </value>
            <value>
                <fullName>Metrios Cross</fullName>
                <label>METRIOS CROSS</label>
            </value>
            <value>
                <fullName>METRIOS CROSS Re-light</fullName>
            </value>
            <value>
                <fullName>METRIOS HD</fullName>
            </value>
            <value>
                <fullName>METRIOS HD CROSS</fullName>
            </value>
            <value>
                <fullName>METRIOS HD CROSS Re-light</fullName>
            </value>
            <value>
                <fullName>METRIOS 332</fullName>
            </value>
            <value>
                <fullName>METRIOS 332 Re-light</fullName>
            </value>
            <value>
                <fullName>M1 LE</fullName>
            </value>
            <value>
                <fullName>306 PRIMA</fullName>
            </value>
            <value>
                <fullName>309 PRIMA</fullName>
            </value>
            <value>
                <fullName>314 PRIMA</fullName>
            </value>
            <value>
                <fullName>606 PRIMA</fullName>
            </value>
            <value>
                <fullName>609 PRIMA</fullName>
            </value>
            <value>
                <fullName>614 PRIMA</fullName>
            </value>
            <value>
                <fullName>909 PRIMA</fullName>
            </value>
            <value>
                <fullName>914 PRIMA</fullName>
            </value>
            <value>
                <fullName>M304</fullName>
            </value>
            <value>
                <fullName>M306</fullName>
            </value>
            <value>
                <fullName>M309</fullName>
            </value>
            <value>
                <fullName>M314</fullName>
            </value>
            <value>
                <fullName>M318</fullName>
            </value>
            <value>
                <fullName>M324</fullName>
            </value>
            <value>
                <fullName>M604</fullName>
            </value>
            <value>
                <fullName>M606</fullName>
            </value>
            <value>
                <fullName>M609</fullName>
            </value>
            <value>
                <fullName>M614</fullName>
            </value>
            <value>
                <fullName>M618</fullName>
            </value>
            <value>
                <fullName>M624</fullName>
            </value>
            <value>
                <fullName>M625</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>