force-app/main/default/objects/Opportunity/fields/Product_of_interest_text_OGP__c.field-meta.xml
<CustomField>
    <fullName>Product_of_interest_text_OGP__c</fullName>
    <label>Product of interest (text OGP)</label>
    <length>120</length>
    <type>Text</type>
</CustomField>