force-app/main/default/objects/Opportunity/fields/Product_TEXT__c.field-meta.xml
<CustomField>
    <fullName>Product_TEXT__c</fullName>
    <label>Product (TEXT)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>