force-app/main/default/objects/Opportunity/fields/Rev__c.field-meta.xml
<CustomField>
    <fullName>Rev__c</fullName>
    <label>Rev</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>