force-app/main/default/objects/Opportunity/fields/Rotary__c.field-meta.xml
<CustomField>
    <fullName>Rotary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rotary</label>
    <type>Checkbox</type>
</CustomField>