force-app/main/default/objects/Opportunity/fields/Stock_demo_unit__c.field-meta.xml
<CustomField>
    <fullName>Stock_demo_unit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the machine is not sold to the end user</description>
    <inlineHelpText>Check this box if the machine is not sold to the end user</inlineHelpText>
    <label>Stock / Demo Unit</label>
    <type>Checkbox</type>
</CustomField>