force-app/main/default/objects/Opportunity/fields/Technology_Type__c.field-meta.xml
<CustomField>
    <fullName>Technology_Type__c</fullName>
    <label>Technology Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visual</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Laser 2D/3D</fullName>
            </value>
            <value>
                <fullName>Robot</fullName>
            </value>
            <value>
                <fullName>Visual + Contact</fullName>
            </value>
            <value>
                <fullName>Visual + Contact + Functional test</fullName>
            </value>
            <value>
                <fullName>Visual + Functional test</fullName>
            </value>
            <value>
                <fullName>Contact + Functional test</fullName>
            </value>
            <value>
                <fullName>Functional test</fullName>
            </value>
            <value>
                <fullName>Visual + Robot</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>