force-app/main/default/objects/Opportunity/fields/Touch_Probe__c.field-meta.xml
<CustomField>
    <fullName>Touch_Probe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Touch Probe</label>
    <type>Checkbox</type>
</CustomField>