force-app/main/default/objects/Opportunity/fields/Touch_Probe_VV_only__c.field-meta.xml
<CustomField>
    <fullName>Touch_Probe_VV_only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Touch Probe (VV only)</label>
    <type>Checkbox</type>
</CustomField>