force-app/main/default/objects/Opportunity/fields/Validity_internal_offer_if_present__c.field-meta.xml
<CustomField>
    <fullName>Validity_internal_offer_if_present__c</fullName>
    <description>For Vici&amp;C SPA users only
compilare questo campo se è stata emessa un&apos;offerta diretta VICI&amp;C SPA</description>
    <inlineHelpText>For Vici&amp;C SPA users only
compilare questo campo se è stata emessa un&apos;offerta diretta VICI&amp;C SPA</inlineHelpText>
    <label>Validity internal offer if present</label>
    <type>Date</type>
</CustomField>