force-app/main/default/objects/Opportunity/validationRules/Application_Engineer_Required_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>Application_Engineer_Required_Closed_Won</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;Closed/won&quot;),
    ISBLANK(TEXT(Application_Engineer__c))
)</errorConditionFormula>
    <errorDisplayField>Application_Engineer__c</errorDisplayField>
    <errorMessage>Please fill in the &quot;Application Engineer&quot; field when the Stage is &quot;Closed/won&quot;.</errorMessage>
</ValidationRule>