force-app/main/default/objects/Opportunity/validationRules/Competition_Detail_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Competition_Detail_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(StageName, &quot;Chiuse/Perse&quot;),
  ISPICKVAL(Motivo_chiusa_persa__c, &quot;Competition&quot;),
  TEXT(Competition_Closed_Lost_Reason_Detail__c) = &quot;&quot;
)</errorConditionFormula>
    <errorDisplayField>Competition_Closed_Lost_Reason_Detail__c</errorDisplayField>
    <errorMessage>Please select the competitor.</errorMessage>
</ValidationRule>