force-app/main/default/objects/Opportunity/validationRules/Competition_Reason_Detail_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Competition_Reason_Detail_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(StageName, &quot;Chiuse/Perse&quot;),
  ISPICKVAL(Motivo_chiusa_persa__c, &quot;Competition&quot;),
  NOT(ISBLANK(TEXT(Competition_Closed_Lost_Reason_Detail__c))),
  ISBLANK(TEXT(Competition_Closed_Lost_Reason__c))
)</errorConditionFormula>
    <errorDisplayField>Competition_Closed_Lost_Reason__c</errorDisplayField>
    <errorMessage>Please select the competition loss reason detail.</errorMessage>
</ValidationRule>