force-app/main/default/objects/Opportunity/validationRules/Loss_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Loss_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(StageName, &quot;Chiuse/Perse&quot;),
  TEXT(Motivo_chiusa_persa__c) = &quot;&quot;
)</errorConditionFormula>
    <errorDisplayField>Motivo_chiusa_persa__c</errorDisplayField>
    <errorMessage>Please select a loss reason before closing the opportunity.</errorMessage>
</ValidationRule>