force-app/main/default/objects/Opportunity/validationRules/Machine_Features_Detail_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Machine_Features_Detail_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(StageName, &quot;Chiuse/Perse&quot;),
  ISPICKVAL(Motivo_chiusa_persa__c, &quot;Machine features&quot;),
  TEXT(Machine_Features_Closed_Lost_Reason_Deta__c) = &quot;&quot;
)</errorConditionFormula>
    <errorDisplayField>Machine_Features_Closed_Lost_Reason_Deta__c</errorDisplayField>
    <errorMessage>Please specify the machine feature detail.</errorMessage>
</ValidationRule>