force-app/main/default/objects/Opportunity/validationRules/MC_Validation_Demo_by_VICI.validationRule-meta.xml
<ValidationRule>
    <fullName>MC_Validation_Demo_by_VICI</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;Chiuse/Conseguite&quot;),
    ISPICKVAL(DEMO__c, &quot;Demo by VICI&quot;),
    ISBLANK(Ticket_Number__c)
)</errorConditionFormula>
    <errorMessage>Please specify Ticket Number.</errorMessage>
</ValidationRule>