force-app/main/default/objects/Opportunity/validationRules/Other_Application_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Application_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Industry__c, &quot;Other&quot;),
  ISBLANK(Other_application__c)
)</errorConditionFormula>
    <errorDisplayField>Other_application__c</errorDisplayField>
    <errorMessage>Please specify the other application.</errorMessage>
</ValidationRule>