force-app/main/default/objects/Opportunity/validationRules/Other_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(StageName, &quot;Chiuse/Perse&quot;),
  ISPICKVAL(Motivo_chiusa_persa__c, &quot;Competition&quot;),
  ISPICKVAL(Competition_Closed_Lost_Reason__c, &quot;Other reasons&quot;),
  ISBLANK(Other_reasons__c)
)</errorConditionFormula>
    <errorDisplayField>Other_reasons__c</errorDisplayField>
    <errorMessage>Please specify the other reason.</errorMessage>
</ValidationRule>