force-app/main/default/objects/Opportunity/listViews/ANDREAS_Opened_opportunities.listView-meta.xml
<ListView>
    <fullName>ANDREAS_Opened_opportunities</fullName>
    <booleanFilter>1 AND (2 OR 3 OR 4 or 5)</booleanFilter>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Chiuse/Conseguite,Chiuse/Perse</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>contains</operation>
        <value>Linda</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>contains</operation>
        <value>karl</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>contains</operation>
        <value>blank</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>contains</operation>
        <value>steffen</value>
    </filters>
    <label>Germany - Opened opportunities</label>
</ListView>