force-app/main/default/objects/Opportunity/listViews/Aperte_heinrich.listView-meta.xml
<ListView>
    <fullName>Aperte_heinrich</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>contains</operation>
        <value>Sandro</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Chiuse/Conseguite,Chiuse/Perse</value>
    </filters>
    <label>Sandro - Opened opportunities</label>
</ListView>