force-app/main/default/objects/Opportunity/listViews/Aperte_karl.listView-meta.xml
<ListView>
    <fullName>Aperte_karl</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Chiuse/Conseguite,Chiuse/Perse</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Scheiner,Fechter,Boumediane,Keller,Paulus</value>
    </filters>
    <label>Germany - Opened opportunities</label>
</ListView>