force-app/main/default/objects/Opportunity/listViews/Copy_of_Germany_opened_2025.listView-meta.xml
<ListView>
    <fullName>Copy_of_Germany_opened_2025</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>machine_from_local_inventory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Scheiner,Fechter,Boumediane</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Chiuse/Conseguite,Chiuse/Perse</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>lessThan</operation>
        <value>1/1/2026</value>
    </filters>
    <label>Germany opened 2025</label>
</ListView>