force-app/main/default/objects/Opportunity/listViews/Gerhard_Opened_opportunities1.listView-meta.xml
<ListView>
    <fullName>Gerhard_Opened_opportunities1</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>gstie</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Chiuse/Conseguite,Chiuse/Perse</value>
    </filters>
    <label>Gerhard - Opened opportunities</label>
</ListView>